Test Java Exo 1

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 <li>Série d'exercices sur les tableaux : <a href="lestableaux.jsp"> Les tableaux</a>
 <li>Série d'exercices sur les Base de Données : <a href="Select_BDD.jsp"> Travailler avec une Base de Données</a>
 </ol>
-
+<p>Les Boucle </body>p>
+  for (int i=0;i<5;i++) {
+    for (int y=1;y<5;y++) {
+      System.out.print("*");}
+    }
+  }
+  
 </body>
 </html>
